Fix clientbar z-index

--- a/app/stylesheets/sass/partials/client-bar.sass
+++ b/app/stylesheets/sass/partials/client-bar.sass
@@ -1,7 +1,10 @@
+$barZindex: 10
+
 .client-bar
   top: 30px
   right: 30px
   position: fixed
+  z-index: $barZindex
   .bubble
     float: left
   .bubble:not(:last-child)
